<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MapFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/event_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_focus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="24dp"
            android:src="@drawable/focus"
            android:tint="#fff"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="24dp"
            android:src="@drawable/plus"
            android:tint="#fff"/>

    </RelativeLayout>

</FrameLayout>